crates/eden-config/tests/cases/fail/inexplicit_configuration_for_db_pool_2/error.snap
---
source: crates/eden-config/tests/cases.rs
expression: diagnostic
input_file: crates/eden-config/tests/cases/fail/inexplicit_configuration_for_db_pool_2
---
error: missing field `min_connections`
  ┌─ /eden.toml:7:1
  │
7 │ [database.replica]
  │ ^^^^^^^^^^^^^^^^^^ missing field `min_connections`
